@@ -3,4 +3,5 @@ sefsdir = $(includedir)/sefs
 sefs_HEADERS = \
 	file_contexts.h \
 	fsdata.h \
-	fshash.h
+	fshash.h \
+	util.h
