@@ -41,8 +41,7 @@ lnk_file,
 chr_file,
 blk_file,
 sock_file,
-fifo_file,
-all_files
+fifo_file
 .SH EXAMPLES
 .TP
 .B replcon -c : ::type_t .
@@ -58,4 +57,4 @@ This manual page was written by Kevin Carr <kcarr@tresys.com>.
 .SH COPYRIGHT
 Copyright(C) 2006 Tresys Technology, LLC
 .SH SEE ALSO
-findcon(1), searchcon(1), indexcon(1)
+findcon(1), indexcon(1), searchcon(1)
