@@ -1,19 +1,19 @@
 .TH sediff 1
 .SH NAME
-sediff  \- SELinux policy difference tool
+sediff \- SELinux policy difference tool
 .SH SYNOPSIS
 .B sediff
-[OPTIONS] POLICY1 POLICY2
+[OPTIONS] ORIGINAL_POLICY MODIFIED_POLICY
 .SH DESCRIPTION
 This manual page describes the
 .B sediff
 command.
 .PP
-.B sediff 
+.B sediff
 allows the user to inspect the semantic differences between two SELinux policy files.
 .SH OPTIONS
 .IP "-c, --classes"
-object class and permission definitions
+object class and common permission definitions
 .IP "-t, --types"
 type definitions
 .IP "-a, --attributes"
@@ -30,18 +30,16 @@ type enforcement rules
 role transition rules
 .IP "-A, --roleallows"
 role allow rules
-.IP "-C, --conds"
-conditionals and their rules
 .IP "-q, --quiet"
 only print different definitions
 .IP "-s, --stats"
-print useful policy statics
+print useful policy statistics
 .IP "-h, --help"
 display this help and exit
 .IP "-v, --version"
 output version information and exit
 .SH AUTHOR
-This manual page was written by Kevin Carr <kcarr@tresys.com>.  
+This manual page was written by Kevin Carr <kcarr@tresys.com>.
 .SH COPYRIGHT
 Copyright(C) 2006 Tresys Technology, LLC
 .SH SEE ALSO
